--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "KERM-MD-V1",
+  "name": "ALI-MD",
   "version": "1.0.0",
   "description": "A WhatsApp bot created using Node.js bro",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name KERM-MD-V1",
-    "stop": "pm2 stop KERM-MD-V1",
-    "restart": "pm2 restart KERM-MD-V1"
+    "start": "pm2 start index.js --deep-monitoring --attach --name ALI-MD",
+    "stop": "pm2 stop ALI-MD",
+    "restart": "pm2 restart ALI-MD"
   },
   "dependencies": {
         "@adiwajshing/keyed-db": "^0.2.4",
