--- a/app.json
+++ b/app.json
@@ -101,6 +101,12 @@
       "required": false,
       "value": "false"
     }, 
+
+    "ANTI_BAD_WORD": {
+      "description": "Make it true if you want bot auto delete bad words.",
+      "required": false,
+      "value": "false"
+    }, 
     
     "AUTO_RECORDING": {
       "description": "Make it true if you want auto recoding.",
