--- a/app.json
+++ b/app.json
@@ -13,6 +13,13 @@
       "value": ""
     },  
     
+    "ANTI_CALL": {
+       "description": "Make it true if you want bot auto call rejected.",
+       "required": false,
+       "value": "true"
+       
+     }, 
+    
     "STICKER_NAME": {
       "description": "type your sticker pack name.",
       "required": false,
