--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ALI-MD",
   "version": "3.0.0",
-  "description": "A WhatsApp Bot Created By ALI",
+  "description": "A WhatsApp Bot Created By ali",
   "main": "index.js",
   "scripts": {
     "start": "pm2 start index.js --deep-monitoring --attach --name ALI-MD",
@@ -12,7 +12,7 @@
     "@bochilteam/scraper": "3.0.0",
     "@neeraj-x0/textpro": "^1.0.3",
     "@vitalets/google-translate-api": "^9.2.0",
-    "@whiskeysockets/baileys": "6.7.9",
+    "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@8.5.12",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@dark-yasiya/yt-dl.js":"latest", 
     "@dark-yasiya/scrap":"1.0.1",
@@ -24,7 +24,7 @@
     "node-schedule": "^2.1.0",
     "node-webpmux": "^3.1.0",
     "pg": "^8.8.0",
-    "pino": "^7.0.5",
+    "pino": "^8.1.0",
     "pm2": "^6.0.5",
     "archiver": "^5.3.1",
     "bitly": "^7.1.2",
