--- a/package.json
+++ b/package.json
@@ -9,23 +9,19 @@
     "restart": "pm2 restart ALI-MD"
   },
   "dependencies": {
-    "@bochilteam/scraper": "3.0.0",
-    "@neeraj-x0/textpro": "^1.0.3",
-    "@vitalets/google-translate-api": "^9.2.0",
     "@whiskeysockets/baileys": "6.7.9",
     "@adiwajshing/keyed-db": "^0.2.4",
-    "@dark-yasiya/yt-dl.js":"latest", 
-    "@dark-yasiya/scrap":"1.0.1",
+    "@dark-yasiya/yt-dl.js": "1.0.5",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@vitalets/google-translate-api": "^9.2.0",
+    "@dark-yasiya/scrap":"1.0.1",    
     "mumaker": "^2.0.0",
     "node-cron": "^3.0.2",
     "node-fetch": "^2.7.0",
     "node-schedule": "^2.1.0",
     "node-webpmux": "^3.1.0",
-    "pg": "^8.8.0",
     "pino": "^7.0.5",
-    "pm2": "^6.0.5",
+    "pm2": "^5.2.0",
     "archiver": "^5.3.1",
     "bitly": "^7.1.2",
     "jimp": "^0.16.1",
@@ -65,7 +61,6 @@
     "qrcode-terminal": "^0.12.0",
     "yt-search":"2.11.1",
     "moment-timezone": "^0.5.40",
-    "raganork-bot": "^3.0.1",
     "scraper-x0": "^1.0.6",
     "sequelize": "^6.23.0",
     "simple-git": "^3.14.1",
