--- a/app.json
+++ b/app.json
@@ -13,12 +13,6 @@
       "value": ""
     },  
     
-    "ANTI_CALL": {
-       "description": "Make it true if you want bot auto call rejected.",
-       "required": false,
-       "value": "false"
-       
-     }, 
     
     "STICKER_NAME": {
       "description": "type your sticker pack name.",
@@ -133,7 +127,7 @@
     
     "ANTI_LINK": {
       "description": "Make it true if you want bot auto wearing group link.",
-      "required": false,
+      "required": true,
       "value": "false"
     }, 
     
@@ -161,11 +155,6 @@
       "value": "false"
     },
 
-    "OWNER_REACT": {
-      "description": "Make it true if you want react on bot number.",
-      "required": false,
-      "value": "false"
-    },
     
     "CUSTOM_REACT": {
       "description": "Make it true if you want custom reactions.",
