--- a/package.json
+++ b/package.json
@@ -8,31 +8,49 @@
     "stop": "pm2 stop ALI-MD",
     "restart": "pm2 restart ALI-MD"
   },
-   "dependencies": {
-    "@shizodevs/baileys": "*",
-    "gifted-baileys": "^1.5.7",
-    "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@8.5.12",
+  "dependencies": {
+    "@bochilteam/scraper": "3.0.0",
+    "@neeraj-x0/textpro": "^1.0.3",
+    "@vitalets/google-translate-api": "^9.2.0",
+    "@whiskeysockets/baileys": "6.7.9",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@dark-yasiya/yt-dl.js":"latest", 
     "@dark-yasiya/scrap":"1.0.1",
-    "gifted-dls":"1.3.5",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@vitalets/google-translate-api": "^9.2.0",
+    "mumaker": "^2.0.0",
+    "node-cron": "^3.0.2",
+    "node-fetch": "^2.7.0",
+    "node-schedule": "^2.1.0",
+    "node-webpmux": "^3.1.0",
+    "pg": "^8.8.0",
     "pino": "^7.0.5",
-    "pm2": "^6.0.6",
-    "util": "^0.12.4",
+    "pm2": "^6.0.5",
+    "archiver": "^5.3.1",
+    "bitly": "^7.1.2",
+    "jimp": "^0.16.1",
+    "module-alias": "^2.2.3",
+    "jsdom": "^20.0.0",
+    "lodash": "^4.17.21",
+    "browser-id3-writer": "^4.4.0",
+    "util": "^0.12.5",
     "express": "latest",
     "axios": "^1.2.5",
-    "buffer": "^6.0.3",
     "crypto-digest-sync": "^1.0.0",
     "crypto-js": "latest",
     "file_size_url": "1.0.4",
     "fs-extra": "^11.1.0",
     "fs": "^0.0.1-security",
+    "g-i-s": "^2.1.6",
+    "google-tts-api": "^2.0.2",
+    "got": "^11.8.2",
+    "heroku-client": "^3.1.0",
+    "imgbb-uploader": "^1.5.1",
     "ffmpeg": "^0.0.4",
     "file-type": "^16.5.3",
     "fluent-ffmpeg": "^2.1.2",
-    "form-data": "^4.0.0",
+    "form-data": "^4.0.1",
+    "dotenv": "^16.4.7",
     "google-tts-api": "^2.0.2",
     "path": "^0.12.7",
     "node-fetch": "^2.6.1",
@@ -41,34 +59,24 @@
     "wa_set_pkg": "1.0.5",
     "wa-sticker-formatter": "^4.4.4",
     "path": "^0.12.7",
-    "vm": "^0.1.0",
+    "adm-zip": "^0.4.16",
     "cheerio": "^1.0.0-rc.12",
     "ruhend-scraper" : "8.0.3",
     "qrcode-terminal": "^0.12.0",
-    "wikipedia":"2.1.2",
     "yt-search":"2.11.1",
-    "sequelize": "^6.37.5",
-    "sqlite3": "latest",
-    "adm-zip": "^0.5.16",
+    "moment-timezone": "^0.5.40",
+    "raganork-bot": "^3.0.1",
+    "scraper-x0": "^1.0.6",
+    "sequelize": "^6.23.0",
+    "simple-git": "^3.14.1",
+    "spinnies": "^0.5.1",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
+    "supervisor": "^0.12.0",
+    "vm": "^0.1.0",
     "api-dylux":"1.8.5",
-    "acrcloud": "^1.4.0",
-    "mongoose": "^8.0.0",
-    "node-cache" :"^5.1.1",
-    "wikipedia": "^2.1.2",
-    "javascript-obfuscator": "^4.0.0",
-    "pdf-lib": "^1.17.1",
-    "telegraph": "^0.8.22",
-    "qrcode-reader": "^1.0.4",
-    "jimp": "^0.16.13",
-    "lyrics-finder": "^1.0.5",
-    "songlyrics": "^2.4.8",
-    "pdfkit": "^0.14.0",
-    "node-webpmux": "^3.1.0",
-    "figlet": "^1.7.0",
-    "sharp": "^0.32.0",
-    "pdf-parse": "^1.1.1",
-    "moment": "^2.29.4",
-    "dotenv": "^16.0.0"
-    
+    "@mrnima/tiktok-downloader":"1.0.0",
+    "@mrnima/facebook-downloader":"1.0.0",
+    "mrnima-moviedl":"1.0.0"
   }
 }
