--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ALI-MD",
-  "version": "3.0.0",
-  "description": "A WhatsApp Bot Created By ALI",
+  "version": "4.5.0",
+  "description": "THE BEST BOT IN THE UNIVERSE",
   "main": "index.js",
   "scripts": {
     "start": "pm2 start index.js --deep-monitoring --attach --name ALI-MD",
@@ -9,74 +9,52 @@
     "restart": "pm2 restart ALI-MD"
   },
   "dependencies": {
-    "@bochilteam/scraper": "3.0.0",
-    "@neeraj-x0/textpro": "^1.0.3",
-    "@vitalets/google-translate-api": "^9.2.0",
-    "@whiskeysockets/baileys": "6.7.9",
-    "@adiwajshing/keyed-db": "^0.2.4",
-    "@dark-yasiya/yt-dl.js":"latest", 
-    "@dark-yasiya/scrap":"1.0.1",
+   "@whiskeysockets/baileys": "latest",
+    "axios": "^1.7.9",
+    "@adiwajshing/keyed-db": "latest",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@vitalets/google-translate-api": "^9.2.0",
-    "mumaker": "^2.0.0",
-    "node-cron": "^3.0.2",
-    "node-fetch": "^2.7.0",
-    "node-schedule": "^2.1.0",
-    "node-webpmux": "^3.1.0",
-    "pg": "^8.8.0",
-    "pino": "^7.0.5",
-    "pm2": "^6.0.5",
-    "archiver": "^5.3.1",
-    "bitly": "^7.1.2",
-    "jimp": "^0.16.1",
-    "module-alias": "^2.2.3",
-    "jsdom": "^20.0.0",
-    "lodash": "^4.17.21",
-    "browser-id3-writer": "^4.4.0",
-    "util": "^0.12.5",
-    "express": "latest",
-    "axios": "^1.2.5",
+    "acrcloud": "^1.4.0",
+    "adm-zip": "^0.5.16",
+    "api-dylux": "latest",
+    "btch-downloader": "^2.2.9",
+    "better-sqlite3": "*",
+    "buffer": "^6.0.3",
+    "cheerio": "^1.0.0-rc.12",
     "crypto-digest-sync": "^1.0.0",
     "crypto-js": "latest",
-    "file_size_url": "1.0.4",
-    "fs-extra": "^11.1.0",
-    "fs": "^0.0.1-security",
-    "g-i-s": "^2.1.6",
-    "google-tts-api": "^2.0.2",
-    "got": "^11.8.2",
-    "heroku-client": "^3.1.0",
-    "imgbb-uploader": "^1.5.1",
+    "dotenv": "^16.0.0",
+    "express": "latest",
     "ffmpeg": "^0.0.4",
     "file-type": "^16.5.3",
+    "file_size_url": "1.0.4",
     "fluent-ffmpeg": "^2.1.2",
-    "form-data": "^4.0.1",
-    "dotenv": "^16.4.7",
+    "form-data": "^4.0.0",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^11.1.0",
     "google-tts-api": "^2.0.2",
-    "path": "^0.12.7",
-    "node-fetch": "^2.6.1",
-    "btch-downloader": "^2.2.9",
+    "javascript-obfuscator": "^4.0.0",
+    "jimp": "^0.16.1",
     "megajs": "^1.1.0",
-    "wa_set_pkg": "1.0.5",
-    "wa-sticker-formatter": "^4.4.4",
+    "mongoose": "^8.0.0",
+    "node-cache": "^5.1.1",
+    "node-fetch": "^2.6.1",
+    "node-webpmux": "^3.1.0",
     "path": "^0.12.7",
-    "adm-zip": "^0.4.16",
-    "cheerio": "^1.0.0-rc.12",
-    "ruhend-scraper" : "8.0.3",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.14.0",
+    "pino": "^7.0.5",
+    "pm2": "^6.0.6",
+    "pg" : "latest",
+    "qrcode-reader": "^1.0.4",
     "qrcode-terminal": "^0.12.0",
-    "yt-search":"2.11.1",
-    "moment-timezone": "^0.5.40",
-    "raganork-bot": "^3.0.1",
-    "scraper-x0": "^1.0.6",
-    "sequelize": "^6.23.0",
-    "simple-git": "^3.14.1",
-    "spinnies": "^0.5.1",
-    "sqlite": "^5.1.1",
+    "ruhend-scraper": "8.0.3",
+    "sequelize": "^6.37.5",
     "sqlite3": "^5.1.7",
-    "supervisor": "^0.12.0",
+    "util": "^0.12.4",
     "vm": "^0.1.0",
-    "api-dylux":"1.8.5",
-    "@mrnima/tiktok-downloader":"1.0.0",
-    "@mrnima/facebook-downloader":"1.0.0",
-    "mrnima-moviedl":"1.0.0"
+    "wa-sticker-formatter": "^4.4.4",
+    "wa_set_pkg": "1.0.5",
+    "yt-search": "2.11.1"
   }
 }
