--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ALI-MD",
-  "version": "4.0.0",
-  "description": "A WHATSAPP BOT CREATED BY AWAISXD",
+  "version": "3.0.0",
+  "description": "A WhatsApp Bot Created By ALI",
   "main": "index.js",
   "scripts": {
     "start": "pm2 start index.js --deep-monitoring --attach --name ALI-MD",
@@ -18,15 +18,18 @@
     "pino": "^7.0.5",
     "pm2": "^6.0.5",
     "util": "^0.12.4",
-    "express": "latest",
+    "express": "5.1.0",
     "moment-timezone": "^0.5.45",
-    "axios": "^1.2.5",
+    "axios": "^1.9.0",
+    "better-sqlite3": "*",
+    "buffer": "^6.0.3",
+    "canvacord": "^5.4.9",
+    "cheerio": "^1.0.0-rc.12",
     "crypto-digest-sync": "^1.0.0",
     "crypto-js": "latest",
     "file_size_url": "1.0.4",
     "fs-extra": "^11.1.0",
-    "fs": "^0.0.1-security",
-    "ffmpeg": "^0.0.4",
+    "ffmpeg": "^0.0.4",   
     "file-type": "^16.5.3",
     "fluent-ffmpeg": "^2.1.2",
     "form-data": "^4.0.0",
@@ -34,22 +37,21 @@
     "path": "^0.12.7",
     "node-fetch": "^2.6.1",
     "btch-downloader": "^2.2.9",
-    "megajs": "^1.1.0",
+    "megajs": "^1.1.7",
     "pdfkit": "^0.14.0",
     "wa_set_pkg": "1.0.5",
-    "jimp": "0.16.1",
-    "buffer": "6.0.3",
     "wa-sticker-formatter": "^4.4.4",
     "path": "^0.12.7",
     "vm": "^0.1.0",
     "adm-zip": "^0.5.16",
     "cheerio": "^1.0.0-rc.12",
+    "sqlite3": "latest",
     "ruhend-scraper" : "8.0.3",
     "qrcode-terminal": "^0.12.0",
     "yt-search":"2.11.1",
     "sequelize": "^6.37.5",
     "sqlite3": "^5.1.7",
-    "vm": "^0.1.0",
+    "jimp": "^0.16.1",
     "api-dylux":"1.8.5",
     "@mrnima/tiktok-downloader":"1.0.0",
     "@mrnima/facebook-downloader":"1.0.0",
