--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "file-type": "^16.5.3",
     "fluent-ffmpeg": "^2.1.2",
     "form-data": "^4.0.0",
+    "javascript-obfuscator": "^4.0.0",
     "google-tts-api": "^2.0.2",
     "path": "^0.12.7",
     "node-fetch": "^2.6.1",
