--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 SESSION_ID=
 PREFIX=.
-OWNER_NUMBER=923003588997
-OWNER_NAME=ALI INXIDE 
+OWNER_NUMBER=923311397803
+OWNER_NAME=Zarab Baloch 
 BOT_NAME=ALI-MD
-STICKER_NAME=ALI-MD
-ALIVE_IMG=https://cdn.ironman.my.id/i/2du3i5.jpg
+STICKER_NAME=ZaRaB 
+ALIVE_IMG=https://files.catbox.moe/d885e2.jpg
 AUTO_STATUS_SEEN=false
 AUTO_STATUS_REPLY=false
 AUTO_STATUS_REACT=false
